fix spacing on footer

--- a/css/main.css
+++ b/css/main.css
@@ -256,9 +256,8 @@ a {
 /* Footer */
 #footer {
     background: #050505 url(../img/img01.jpg) repeat;
-    height: 140px;
     margin: 0 auto;
-    padding: 50px 0 15px 0;
+    padding: 15px 0 15px 0;
     font-family: 'Abel', sans-serif;
 }
 
